overflow fix

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -49,6 +49,7 @@ body {
     font-size: 16px;
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
 }
 
 body.dark {
